[package]
name = "latch"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
authors = ["Vrtgs"]
repository = "https://github.com/Vrtgs/latch-rs"
documentation = "https://docs.rs/latch"
description = "fast and efficent "
categories = ["asynchronous", "no-std", "concurrency"]

[features]
default = []
std = ["spin/std"]

[dependencies]
spin = { version = "0.10.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "time", "macros"] }
smol = "2.0.0"
pollster = "0.4.0"
async-std = { version = "1.13.1", features = ["attributes"] }
